--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
       <button id="save-markdown" disabled>Save File</button>
       <button id="revert" disabled>Revert</button>
       <button id="save-html">Save HTML</button>
+      <button id="min-btn">-</button>
+      <button id="max-btn">[]</button>
+      <button id="close-btn">X</button>
     </section>
 
     <section class="content">
